objects/L2O_ContractingAccToPricingModel__mdt.object
<CustomObject>
    <description>To contain all the mappings of the Contracting Account to valid Pricing Model values.</description>
    <fields>
        <fullName>L2O_Contracting_Account_GUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Contracting Account GUID</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account_Name__c</fullName>
        <label>Contracting Account Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Pricing_Model_Values__c</fullName>
        <description>To capture all the valid Pricing Model values for the respective Contracting Account as per TDUAT.</description>
        <label>Pricing Model Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>L2O_ContractingAccToPricingModel</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>L2O_Contracting_Account_Name__c</columns>
        <columns>L2O_Contracting_Account_GUID__c</columns>
        <columns>L2O_Pricing_Model_Values__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>L2O_ContractingAccToPricingModels</pluralLabel>
</CustomObject>